--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
-    "sass": "^1.52.1"
+    "sass": "^1.52.1",
+    "wow.js": "^1.2.2"
   }
 }
