--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "sass": "^1.52.1",
+    "counterup": "^1.0.2",
+    "counterup2": "^2.0.2",
+    "typed.js": "^2.0.12",
     "wow.js": "^1.2.2"
   }
 }
